# kyosin

./: .gitignore  README.md  config.ini  main.py  memo.txt  presenter_1.py  pyproject.toml  requirements.txt  test.py  給与明細作成.py  講師情報.xlsx
data/: テンプレート.xlsx
src/models/: model.py
src/presenter/: functions.py  handler.py  presenter.py
src/settings/: config.py  translate.py
src/views/: error.py  popup.py  style.py  view.py
