[tool.poetry]
name = "給与明細作成"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.9"
PySimpleGUI = "^4.60.0"
msoffcrypto-tool = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
